--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react-native": "0.83.1",
     "react-native-bootsplash": "^6.3.11",
     "react-native-camera-kit": "^16.1.3",
+    "react-native-device-info": "^15.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.4",
+    "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
